# juckx

./: .gitignore  Cargo.toml  README.md  flake.nix  test.md
src/: main.rs
src/cli/: mod.rs
src/gemini/: mod.rs
src/git/: mod.rs
