[package]
name = "juckx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.38", features = ["derive"]}
tokio = {version = "1.45.0", features = ["full"]}
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"