[package]
name = "juckx"
version = "0.2.6"
edition = "2021"
authors = ["devil <europedreadlydevil@gmail.com>"]
description = "Rust CLI tool to automate git commit message generation using Gemini AI"
license = "MIT"
repository = "https://github.com/morphqdd/juckx"
homepage = "https://github.com/morphqdd/juckx"
documentation = "https://docs.rs/juckx"
keywords = ["git", "cli", "automation", "ai", "gemini"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = {version = "4.5.38", features = ["derive"]}
tokio = {version = "1.45.0", features = ["full"]}
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
